# rust-music-keyboard

./: .gitignore  Cargo.toml  InnoSetupScript.iss  LICENSE  README.md  build.rs  my_chosen_project _template.doc  portfolio template.docx
.github/workflows/: codecov.yml  rust.yml
config/: settings.json
src/: chord.rs  gui.rs  main.rs  midi.rs  note.rs  output.mid
