[package]
name = "rust-music-keyboard"
version = "0.1.6"
edition = "2024"

[dependencies]
iced = "0.13.1"
palette = "0.7.6"
image = "0.25.5"
rodio = "0.20.1" 
threadpool = "1.8.1"
num_cpus = "1.16.0"
midly = "0.5.3"
once_cell = {version="1.21.0"}
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.31"
iced_native = "0.10.3"
strum_macros = "x"

[[bin]]
name = "KeyboardAppLCammish"
path = "src/main.rs"
windows = true

[build-dependencies]
winresource = "0.1.20"
