[package]
name = "rust-music-keyboard"
version = "0.1.8"
edition = "2024"

[dependencies]
iced = "0.13.1"
palette = "0.7.6"
image = "0.25.5"
rodio = "0.20.1" 
midly = "0.5.3"
once_cell = {version="1.21.1"}
tokio = { version = "1.44.1", features = ["full"] }
iced_native = "0.10.3"
strum_macros = "0.27.1"
async-trait = "0.1.87" 

[[bin]]
name = "KeyboardAppLCammish"
path = "src/main.rs"
windows = true

[build-dependencies]
winresource = "0.1.20"